PP-FEAT-admin side verified, signed, other change

--- a/src/app/pages/activity-tracker/activity-tracker.component.html
+++ b/src/app/pages/activity-tracker/activity-tracker.component.html
@@ -11,10 +11,9 @@
                         (input)="filterTable()" />
                 </mat-form-field>
             </div>
-        </div>
-        <br>
-        <div class="row" style="display: flex; justify-content: flex-start; margin-right: auto;">
-            <h2>Filtered tracker count : {{trackerLength}}</h2>
+            <div class="col-md-12" style="display: flex; justify-content: flex-start; margin-right: auto;">
+                <h2>Filtered tracker count : {{trackerLength}}</h2>
+            </div>
         </div>
         <div class="row">
             <div class="col-md-12">
