--- a/src/app/pages/admin-management/admin-management.component.html
+++ b/src/app/pages/admin-management/admin-management.component.html
@@ -18,10 +18,9 @@
                             <i class="fa fa-plus"></i>
                         </button>
                     </div>
-                </div>
-                <br>
-                <div class="row" style="display: flex; justify-content: flex-start; margin-right: auto;">
-                    <h2>Filtered college count : {{collegeLength}}</h2>
+                    <div class="col-md-12" style="display: flex; justify-content: flex-start; margin-right: auto;">
+                        <h2>Filtered college count : {{collegeLength}}</h2>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
