--- a/src/app/pages/student-management/student-management.component.html
+++ b/src/app/pages/student-management/student-management.component.html
@@ -4,27 +4,38 @@
     </div>
     <div class="card-body">
         <div class="row">
+            <div class="col-md-5"
+                style="font-size: 18px; display: flex; justify-content: flex-start; margin-right: auto;">
+                <strong>Name</strong></div>
+            <div class="col-md-5"
+                style="font-size: 18px; display: flex; justify-content: flex-start; margin-right: auto;"><strong>Email
+                    ID</strong></div>
+            <div class="col-md-2"></div>
+        </div>
+        &nbsp;
+        <div class="row" style="margin-top: -1%;">
             <div class="col-md-5">
-                <mat-form-field class="example-full-width">
-                    <input matInput type="text" [(ngModel)]="filterText" placeholder="Name"
-                        (input)="filterTableName()" />
-                </mat-form-field>
+                <input style="height: 50px;" type="text" id="name" name="name" class="form-control" pattern="[a-zA-Z ]*"
+                    placeholder="Name" #name>
             </div>
             <div class="col-md-5">
-                <mat-form-field class="example-full-width">
-                    <input matInput type="text" [(ngModel)]="filterText" placeholder="Email"
-                        (input)="filterTableEmail()" />
-                </mat-form-field>
+                <input style="height: 50px;" type="text" id="email" name="email" class="form-control"
+                    pattern="[a-zA-Z ]*" placeholder="Email" #email>
             </div>
             <div class="col-md-2">
-                <p-button label="SEARCH" styleClass="p-button-secondary"></p-button>
+                <p-button label="SEARCH" styleClass="p-button-secondary"
+                    (click)="search(name.value,email.value)"></p-button>
             </div>
         </div>
+        <br>
         <div class="row">
             <div class="col-md-12">
                 <mat-form-field class="example-full-width">
                     <input matInput type="text" [(ngModel)]="filterText" placeholder="Search" (input)="filterTable()" />
                 </mat-form-field>
+            </div>
+            <div class="col-md-12" style="display: flex; justify-content: flex-start; margin-right: auto;">
+                <h2>Filtered students count : {{studentsLength}}</h2>
             </div>
         </div>
         <div class="row">
@@ -54,14 +65,15 @@
                         <td>{{student.created_at}}</td>
                         <td>
                             <a class="hoverIcon">
-                                <i class="fa fa-user" (click)="viewMore(student)"></i>
+                                <i class="pi pi-user" style="font-size: 1.5rem; cursor: pointer;"
+                                    (click)="viewMore(student.id,student.app_id)"></i>
                             </a>
                         </td>
                         <td>
                             <mat-slide-toggle class="example-margin" [color]="color"
-                            [checked]="student.user_status == 'active'" [disabled]="disabled"
-                            (change)="toggleChanged($event.checked,student)">
-                        </mat-slide-toggle>
+                                [checked]="student.user_status == 'active'" [disabled]="disabled"
+                                (change)="toggleChanged($event.checked,student)">
+                            </mat-slide-toggle>
                         </td>
                     </tr>
                 </ng-template>
@@ -69,7 +81,4 @@
         </div>
     </div>
     <p-toast></p-toast>
-    <div class="card-footer text-muted">
-        2 days ago
-    </div>
 </div>
