--- a/src/app/pages/new-attestation/new-attestation.component.html
+++ b/src/app/pages/new-attestation/new-attestation.component.html
@@ -84,7 +84,7 @@
           </mat-step>
           <mat-step>
             <ng-template matStepLabel>3rd Steps</ng-template>
-            
+            <app-purpose></app-purpose>
             <button mat-button matStepperPrevious class="previous-custom-button" style="margin-right: 10px;">Back</button>
             <button mat-button matStepperNext class="next-custom-button">Next</button>
           </mat-step>
