--- a/src/app/pages/student-management/student-management.component.css
+++ b/src/app/pages/student-management/student-management.component.css
@@ -1,8 +1,6 @@
-.example-container {
-    display: flex;
-    flex-direction: column;
-}
-
 mat-form-field {
-    width: 100%;
+    width: 80%;
+    display: flex;
+    justify-content: flex-start; 
+    margin-right: auto;
 }
