--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,73 +1,81 @@
-<div class="container containerdiv">
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <div class="formdiv">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2>Login</h2>
-        </div>
-        <div class="col-lg-12 set-margin">
-          <input type="text" id="userName" class="form-control" formControlName="userName" placeholder="Enter Username">
-          <span class="text-danger">
-            Username is required
-          </span>
-          <span class="text-danger">
-            Enter a valid email address
-          </span>
-        </div>
-        <div class="col-lg-12 set-margin">
-          <input type="password" id="passWord" class="form-control" formControlName="passWord"
-            placeholder="Enter Password">
-          <span class="text-danger">
-            Password is required
-          </span>
-          <span class="text-danger">
-            Password should have minimum 8 characters, at least 1 uppercase letter, 1 lowercase
-            letter and 1 number
-          </span>
-        </div>
-        <div class="col-lg-12 set-margin-submit">
-          <button type="submit" class="form-control" (click)="onSubmit()">Login</button>
-        </div>
-        <div>
-          <p-dialog header="Verify OTP" [(visible)]="visible" [style]="{width: '50vw'}">
-            <div>
-              <div class="card text-center">
-                <!-- <div class="card-header" style="font-weight: bold; background-color: rgb(174, 152, 176) !important;">
-                  <h1 style="font-weight: bold;">Verify OTP</h1>
-                </div> -->
-                <form [formGroup]="otpForm">
-                  <div class="card-body">
-                    <h2 class="card-title">Enter Your OTP</h2>
-                    <div class="row box">
-                      <div class="col-xs-1">
-                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
-                          formControlName="otp1Value">
-                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
-                          formControlName="otp2Value">
-                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
-                          formControlName="otp3Value">
-                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
-                          formControlName="otp4Value">
-                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
-                          formControlName="otp5Value">
-                        <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)"
-                          formControlName="otp6Value">
-                      </div>
-                    </div>
-                    <br>
-                  </div>
-                  <div class="card-footer">
-                    <p-button label="Cancel" (click)="cancel()"></p-button>
-                    <p-button label="Verify" (click)="verify()"></p-button>
-                    <p-button label="Resend OTP" (click)="resendOtp()"></p-button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </p-dialog>
+<div class="mcr">
+  <div class="bac">
+    <div class="listing-item tns-item"></div>
+    <div class="listing-item tns-item"></div>
+    <div class="listing-item tns-item"></div>
+    <div class="listing-item tns-item"></div>
+    <div class="listing-item tns-item"></div>
+    <div class="listing-item tns-item"></div>
+    <div class="listing-item tns-item"></div>
+    <div class="listing-item tns-item"></div>
+    <div class="listing-item tns-item"></div> 
+    <div class="listing-item tns-item"></div>
+  </div>
+  <div class="row" style="position: absolute; width: 100%; height: 100%;">
+    <div class="col-md-6 about">
+      <div class="logo">
+        <img src="../../../assets/IMG/UM Logo (632 × 505 px).svg" alt="">
+      </div>
+      <h5>Welcome to Mumbai University Online Attestation ! <br>Log in with your email.</h5>
+      <br>
+      <h4>Don't have an account? <a href="">Register</a></h4>
+    </div>
+    <div class="col-md-6 form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <h1>Log In</h1>
+      <h5>Welcome to Mumbai University Online Attestation !<br> Log in with your email.</h5>
+      <br>
+      <input type="email" id="userName" formControlName="userName" placeholder="Enter Username">
+      <label for="">Username is required Enter a valid email address</label><br>
+      <div style="position: relative; width: 100%;">
+        <input type="password" id="passWord" formControlName="passWord" placeholder="Enter Password">
+        <div class="eye">
+          <i class="fa fa-eye" aria-hidden="true"></i>
+          <i class="fa fa-eye-slash" aria-hidden="true"></i>
         </div>
       </div>
+      <label for="">Password is required Password should have minimum 8 characters, at least 1 uppercase letter, 1
+        lowercase letter and 1 number</label><br>
+      <div class="cf">
+        <div class="rem">
+          <input type="checkbox">
+          <h6>Remember Me</h6>
+        </div>
+        <h6><a style="float: right; cursor: pointer" cFormCheckLabel for="checkOne">forgot password ?</a></h6>
+      </div><br>
+      <button type="submit" (click)="onSubmit()">Login</button>
+      <br>
+      <h5 class="register">Don't have an account? <a href="">Register</a></h5>
     </div>
-  </form>
+  </div>
 </div>
+<p-dialog header="Verify OTP" [(visible)]="visible" [style]="{width: '50vw'}">
+  <div>
+    <div class="card text-center">
+      <!-- <div class="card-header" style="font-weight: bold; background-color: rgb(174, 152, 176) !important;">
+        <h1 style="font-weight: bold;">Verify OTP</h1>
+      </div> -->
+      <form [formGroup]="otpForm">
+        <div class="card-body">
+          <h2 class="card-title">Enter Your OTP</h2>
+          <div class="row box">
+            <div class="col-xs-1">
+              <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)" formControlName="otp1Value">
+              <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)" formControlName="otp2Value">
+              <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)" formControlName="otp3Value">
+              <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)" formControlName="otp4Value">
+              <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)" formControlName="otp5Value">
+              <input type="text" id="otp" maxlength="1" (keypress)="numberOnly($event)" formControlName="otp6Value">
+            </div>
+          </div>
+          <br>
+        </div>
+        <div class="card-footer">
+          <p-button label="Cancel" (click)="cancel()"></p-button>
+          <p-button label="Verify" (click)="verify()"></p-button>
+          <p-button label="Resend OTP" (click)="resendOtp()"></p-button>
+        </div>
+      </form>
+    </div>
+  </div>
+</p-dialog>
 <p-toast></p-toast>
