--- a/src/app/pages/verified-applications/verified-applications.component.html
+++ b/src/app/pages/verified-applications/verified-applications.component.html
@@ -81,7 +81,7 @@
                         <span *ngIf="verified.purposeOtherEmail != null"
                             style="margin-bottom: 1px;">{{verified.purposeOtherEmail}} </span>
                     </td>
-                    <td>{{verified.created_at}}</td>
+                    <td>{{verified.application_date}}</td>
                     <td>{{verified.approved_by}}</td>
                     <td>
                         <a class="hoverIcon">
