--- a/src/app/pages/emailed-applications/emailed-applications.component.html
+++ b/src/app/pages/emailed-applications/emailed-applications.component.html
@@ -1,1 +1,93 @@
-<p>emailed-applications works!</p>
+<div class="card flex justify-content-center">
+    <p-card header="Emailed Applications">
+
+    <div class="card">
+        <p-table
+        #dt1
+        dataKey="id" 
+        [showCurrentPageReport]="true"  
+        [tableStyle]="{ 'min-width': '75rem' }"
+            >
+            <ng-template pTemplate="caption"> 
+                <div class="row">
+                  <div class="col-md-2">
+                    <span class="p-input-icon-left">
+                      <i class="pi pi-search"  style="color: rgb(243, 191, 24)"></i>
+                      <input pInputText type="text"    placeholder="Search App ID" #id />
+                    </span>
+                  </div>
+                  <div class="col-md-2">
+                    <span class="p-input-icon-left">
+                      <i class="pi pi-search"  style="color: rgb(243, 191, 24)"></i>
+                      <input pInputText type="text"   placeholder="Search Name" #name />
+                    </span>
+                  </div>
+                  <div class="col-md-2" >
+                    <span class="p-input-icon-left">
+                      <i class="pi pi-search" style="color: rgb(243, 191, 24)"></i>
+                      <input pInputText type="text"    placeholder="Search Email ID" #email />
+                    </span>
+                  </div>
+                  <div class="col-md-2"></div>
+                  <div class="col-md-2"  >
+                    <p-calendar   selectionMode="range" placeholder="Date Picker" [readonlyInput]="true" [showIcon]="true" ></p-calendar>
+                </div>
+                  <div class="col-md-2">
+                    <p-button label="Download Excel" styleClass="p-button-warning"  #datePicker></p-button>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-2 pt-2">
+                    <span class="p-input-icon-left">
+                      <i class="pi pi-search" style="color: rgb(243, 191, 24)"></i> 
+                      <input pInputText type="text" [(ngModel)]="filterText" (input)="filterData()" placeholder="Search Keywords" #globalSearch/> 
+                    </span>
+                  </div>
+                  <div class="col-md-8 pt-2">
+                     <p-button label="search" (click)="search(id.value,name.value,email.value)" styleClass="p-button-warning" ></p-button>
+                  </div>
+                  <div class="col-md-2 pt-2" >
+                    <button pButton label="Clear" (click)="clear()" style="color: rgb(243, 191, 24)" class="p-button-outlined" icon="pi pi-filter-slash"  ></button> 
+                </div>
+               
+                </div> 
+                <!-- <p>Total Student Count : {{this.totalCount}}</p> -->
+              </ng-template> 
+               
+            <ng-template pTemplate="header">
+                <tr>
+                    <th style="width:5%">Application ID</th>
+                    <th style="width:10%">Name</th>
+                    <th style="width:10%">Email ID</th> 
+                    <th style="width:10%">Applied For</th> 
+                    <th style="width:10%">Purpose</th>
+                    <th style="width:10%">Application Date</th>
+                    <th style="width:10%">Approved By</th> 
+                    <th style="width:10%">Email Sent On</th> 
+                    <th style="width:10%">Email Status</th>  
+                    <th style="width:5%">Action</th> 
+                </tr> 
+            </ng-template>
+            <ng-template pTemplate="body" >
+                <tr>
+                    <td>aaa</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage">
+                <tr>
+                    <td colspan="5">No Data found.</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+    </p-card>
+</div>
