KG-Feat-replaced null value to empty string

--- a/src/app/pages/pending-applications/pending-applications.component.html
+++ b/src/app/pages/pending-applications/pending-applications.component.html
@@ -1,7 +1,7 @@
 
 <div class="card flex justify-content-center">
     <p-card header="Pending Applications">
-        <mat-tab-group #tabGroup (selectedIndexChange)="handleTabChange($event,10,0,null,'',null,'')">
+        <mat-tab-group #tabGroup (selectedIndexChange)="handleTabChange($event,10,0,' ','','','')">
             <mat-tab label="New Application"  >  
                 <p-toast></p-toast>
                 <p-confirmDialog [style]="{width: '20vw'}"></p-confirmDialog>
