--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,9 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css"; 
-@import '~@angular/material/prebuilt-themes/indigo-pink.css'; */
+/* @import '~@angular/material/prebuilt-themes/indigo-pink.css'; */  
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css"; 
 
 * {
     margin: 0;
