UI for login and register

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -24,8 +24,10 @@
       <h1>Log In</h1>
       <h5>Welcome to Mumbai University Online Attestation !<br> Log in with your email.</h5>
       <br>
+      <h6 class="label">Email address:</h6>
       <input type="email" id="userName" formControlName="userName" placeholder="Enter Username">
       <label for="">Username is required Enter a valid email address</label><br>
+      <h6 class="label">Password:</h6>
       <div style="position: relative; width: 100%;">
         <input type="password" id="passWord" formControlName="passWord" placeholder="Enter Password">
         <div class="eye">
