--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,1 +1,98 @@
-<p>register works!</p>
+<div class="row mcr">
+    <div class="col-md-6 form">
+
+        <div class="logo1">
+            <img src="../../../assets/IMG/UM Logo (632 × 505 px).svg">
+        </div>
+
+        <h1 style="text-align: center; color: DodgerBlue;">Register</h1>
+
+        <br>
+
+        <label for="input-name">Applicant First Name:</label>
+        <input type="text" placeholder="First Name">
+
+        <br>
+        <br>
+
+        <label for="input-name">Applicant Last Name:</label>
+        <input type="text" placeholder="Last Name">
+
+        <br>
+        <br>
+
+        <label for="input-name">Gender:</label>
+
+        <div class="container">
+            <div class="radio">
+                <input id="radio-1" name="redio" type="radio">
+                <label for="radio-1" class="radio-label">Male</label>
+            </div>
+
+            <div class="radio">
+                <input id="radio-2" name="redio" type="radio">
+                <label for="radio-2" class="radio-label">Female</label>
+            </div>
+
+            <div class="radio">
+                <input id="radio-3" name="redio" type="radio">
+                <label for="radio-3" class="radio-label">Others</label>
+            </div>
+        </div>
+
+        <br>
+
+        <label for="inputMobile"> Country Code and Mobile number <span style="color:red;">*</span></label>
+
+        <input type="number">
+
+        <br><br>
+
+        <label for="input-email">Email Address:</label>
+        <input type="email" placeholder="Email address">
+
+        <br><br>
+
+        <label for="input-password">Password:</label>
+        <div style="position: relative; width: 100%;">
+            <input type="password" id="passWord" formControlName="passWord" placeholder="Enter Password">
+            <div class="eye">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                <i class="fa fa-eye-slash" aria-hidden="true"></i>
+            </div>
+        </div>
+
+        <br>
+
+        <label for="input-re-password">Confirm Password:</label>
+        <div style="position: relative; width: 100%;">
+            <input type="password" id="passWord" formControlName="passWord" placeholder="Enter Password">
+            <div class="eye">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                <i class="fa fa-eye-slash" aria-hidden="true"></i>
+            </div>
+        </div>
+
+        <br><br>
+
+        <div style="width: 100%; display: flex;justify-content: center;">
+            <button>Proceed</button>
+        </div>
+
+        <h6 class="login1" aria-label="Sign in">
+            Already have an account? <a style="color:DodgerBlue;" href="">Login</a>
+        </h6>
+    </div>
+    <div class="col-md-6 about">
+        <div class="elip"></div>
+        <div class="aboutt">
+            <div class="logo">
+                <img src="../../../assets/IMG/UM Logo (632 × 505 px).svg" alt="logo">
+            </div>
+
+            <h4> Already have an account?
+                <a style="color:DodgerBlue;" href="">Login</a>
+            </h4>
+        </div>
+    </div>
+</div>
