--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -39,17 +39,14 @@ a {
 }
 
 .about .logo {
-  position: relative;
-  width: 350px;
-  height: 200px;
+  width: 450px;
+  height: 300px;
   margin: 0 auto;
 }
 
 .about .logo img {
-  position: absolute;
-  z-index: 3;
-  width: 350px;
-  height: 200px;
+  width: 450px;
+  height: 300px;
 }
 
 .about h4, h5 {
@@ -111,7 +108,6 @@ a {
   background-color: #bef4d0;
   border-radius: 50px;
   margin: auto;
-  margin-top: 3%;
 }
 
 .form {
@@ -123,6 +119,11 @@ a {
   flex-direction: column;
   align-items: center;
   margin: auto 0;
+}
+
+.form .label{
+  width: 100%;
+  text-align: left;
 }
 
 input[type=email],
